update title slide

--- a/index.html
+++ b/index.html
@@ -329,34 +329,25 @@
 <section id="title-slide" data-notes="Before we dive into the official part of today’s event, we’d like to share some exciting updates. We’re a new group of organizers, and with that comes some fresh changes! First, we’ve launched a brand-new website where you can find all the latest updates, resources, and information about our events. We’re also expanding our presence on social media—you can now connect with us on LinkedIn and Bluesky. Be sure to follow us there to stay in the loop and engage with the community between meetups. We’re really looking forward to growing this group together and making this a vibrant, welcoming space for R enthusiasts of all levels. Thank you for being part of this journey with us." class="center">
   <h1 class="title">Welcome to the 36th meeting of the</h1>
   <p class="subtitle">Zurich R User Group</p>
-  <div style="display: flex; justify-content: space-around; margin-top: 2em;">
-    <div style="text-align: center;">
-      <img src="assets/images/qr_website.png" alt="Image 1" style="width: 350px; height: auto;">
-      <p style="font-size: 0.8em;">
-        <a href="https://zurich-r-user-group.github.io/" target="_blank">
+  <div style="display: flex; flex-direction: column; align-items: center; margin-top: 0.1em;">
+    <div style="text-align: center; margin-bottom: 0.1em;">
+      <div style="display: flex; flex-direction: column; align-items: center;">
+        <a href="https://zurich-r-user-group.github.io/" target="_blank" style="margin-bottom: 0.0em; text-decoration: none; font-size: 1em;">
           <i class="fa fa-earth" aria-hidden="true"></i> Website
         </a>
-      </p>
+        <img src="assets/images/qr_website.png" alt="Website QR Code" style="width: 500px; height: auto; margin-bottom: 0.5em;">
+      </div>
     </div>
-    <div style="text-align: center;">
-      <img src="assets/images/qr_linkedin.png" alt="Image 2" style="width: 350px; height: auto;">
-      <p style="font-size: 0.8em;">
-        <a href="https://www.linkedin.com/company/zuerich-r-user-group/" target="_blank">
+    <div style="display: flex; justify-content: center; align-items: center; gap: 2em; width: 100%;">
+      <a href="https://www.linkedin.com/company/zuerich-r-user-group/" target="_blank" style="font-size: 1em; text-decoration: none;">
         <i class="fa-brands fa-linkedin" aria-hidden="true"></i> LinkedIn
-         </a>
-      </p>
-    </div>
-    <div style="text-align: center;">
-      <img src="assets/images/qr_bsky.png" alt="Image 3" style="width: 350px; height: auto;">
-      <p style="font-size: 0.8em;">
-         <a href="https://bsky.app/profile/ruserszurich.bsky.social" target="_blank">
+      </a>
+      <a href="https://bsky.app/profile/ruserszurich.bsky.social" target="_blank" style="font-size: 1em; text-decoration: none;">
         <i class="fa-brands fa-bluesky" aria-hidden="true"></i> Bluesky
-        </a>
-      </p>
+      </a>
     </div>
   </div>
 </section>
-
 <!-- Include Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <section id="thank-you" class="slide level2">
