--- a/title-slide.html
+++ b/title-slide.html
@@ -3,30 +3,22 @@
 $if(subtitle)$
   <p class="subtitle">$subtitle$</p>
 $endif$
-  <div style="display: flex; justify-content: space-around; margin-top: 2em;">
-    <div style="text-align: center;">
-      <img src="assets/images/qr_website.png" alt="Image 1" style="width: 350px; height: auto;">
-      <p style="font-size: 0.8em;">
-        <a href="https://zurich-r-user-group.github.io/" target="_blank">
+  <div style="display: flex; flex-direction: column; align-items: center; margin-top: 0.1em;">
+    <div style="text-align: center; margin-bottom: 0.1em;">
+      <div style="display: flex; flex-direction: column; align-items: center;">
+        <a href="https://zurich-r-user-group.github.io/" target="_blank" style="margin-bottom: 0.0em; text-decoration: none; font-size: 1em;">
           <i class="fa fa-earth" aria-hidden="true"></i> Website
         </a>
-      </p>
+        <img src="assets/images/qr_website.png" alt="Website QR Code" style="width: 500px; height: auto; margin-bottom: 0.5em;">
+      </div>
     </div>
-    <div style="text-align: center;">
-      <img src="assets/images/qr_linkedin.png" alt="Image 2" style="width: 350px; height: auto;">
-      <p style="font-size: 0.8em;">
-        <a href="https://www.linkedin.com/company/zuerich-r-user-group/" target="_blank">
+    <div style="display: flex; justify-content: center; align-items: center; gap: 2em; width: 100%;">
+      <a href="https://www.linkedin.com/company/zuerich-r-user-group/" target="_blank" style="font-size: 1em; text-decoration: none;">
         <i class="fa-brands fa-linkedin" aria-hidden="true"></i> LinkedIn
-         </a>
-      </p>
-    </div>
-    <div style="text-align: center;">
-      <img src="assets/images/qr_bsky.png" alt="Image 3" style="width: 350px; height: auto;">
-      <p style="font-size: 0.8em;">
-         <a href="https://bsky.app/profile/ruserszurich.bsky.social" target="_blank">
+      </a>
+      <a href="https://bsky.app/profile/ruserszurich.bsky.social" target="_blank" style="font-size: 1em; text-decoration: none;">
         <i class="fa-brands fa-bluesky" aria-hidden="true"></i> Bluesky
-        </a>
-      </p>
+      </a>
     </div>
   </div>
 $for(author)$
@@ -36,6 +28,5 @@ $if(date)$
   <p class="date">$date$</p>
 $endif$
 </section>
-
 <!-- Include Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
