detail intro/ talk

--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
 <h2>Today’s Agenda</h2>
 <p><br><br></p>
 <p><a href="style=%22color:#276DC2;%22">6.30</a> Introduction / Welcome by the organizing team</p>
-<p><a href="style=%22color:#276DC2;%22">6.45</a> Introduction by WSL</p>
-<p><a href="style=%22color:#276DC2;%22">6.50</a> Intro &amp; Talks (Volodymyr Trotsiuk, Dominique Weber, Micah Wilhelm)</p>
+<p><a href="style=%22color:#276DC2;%22">6.45</a> Introduction by WSL (Volodymyr Trotsiuk)</p>
+<p><a href="style=%22color:#276DC2;%22">6.50</a> Talks (Dominique Weber, Micah Wilhelm)</p>
 <p><a href="style=%22color:#276DC2;%22">7.50</a> Take the Stage: Pitching job ads, ideas, events, …</p>
 <p><a href="style=%22color:#276DC2;%22">8.00-9.00</a> Apéro 🍻 🎉 💫</p>
 <p><br></p>
